--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName:com.mysql.jdbc.Driver
-jdbc.url:jdbc:mysql://127.0.0.1:3306/demo
-jdbc.user:root
-jdbc.password:root
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/demo
+jdbc.user=root
+jdbc.password=root
